[package]
name = "jitterbug"
version = "0.0.1"
edition = "2024"
authors = ["Evan Gipson <evangipson@gmail.com>"]
exclude = [".gitignore"]
description = "A true random number generator based on CPU execution jitter."
homepage = "https://docs.rs/crate/jitterbug"
documentation = "https://docs.rs/jitterbug"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/evangipson/jitterbug"
keywords = ["random", "random-number", "random-generation", "mathematics", "cryptography"]
categories = ["cryptography", "mathematics", "security"]

[dependencies]
# the standard trait for RNGs
rand_core = "0.10.0"